PBL Features Unfinished

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -43,6 +43,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{{ url_for('bpranav.dogs') }}">Dogs Adoption</a>
                     <a class="dropdown-item" href="{{ url_for('bpranav.birds') }}">Birds Adoption</a>
+                    <a class="dropdown-item" href="{{ url_for('btanay.hangman') }}">Hangman</a>
                 </div>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
