--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -43,21 +43,8 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{{ url_for('bpranav.dogs') }}">Dogs Adoption</a>
                     <a class="dropdown-item" href="{{ url_for('bpranav.birds') }}">Birds Adoption</a>
-                    <a class="dropdown-item" href="{{ url_for('bchase.cats') }}">Cat Adoption</a>
+                    <a class="dropdown-item" href="{{ url_for('btanay.hangman') }}">Hangman</a>
                 </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link" href={{ url_for('bchase.Enclosures') }}>Enclosures</a>
-            </li>
-
-        </div>
-
-    </div>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <ul class="navbar-nav mr-auto">
-            <li class="navbar-nav">
-            </li>
-
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Database Features
