--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -36,6 +36,7 @@
                     <a class="dropdown-item" href="{{ url_for('bchase.chase')}}">Chase</a>
                 </div>
             </li>
+
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     PBL Pages
@@ -45,15 +46,23 @@
                     <a class="dropdown-item" href="{{ url_for('bpranav.birds') }}">Birds Adoption</a>
                     <a class="dropdown-item" href="{{ url_for('bchase.cats') }}">Cats Adoption</a>
                     <a class="dropdown-item" href="{{ url_for('bcolin.imageCarousel') }}">Meet Some Pets</a>
+                </div>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Learn!
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{{ url_for('bconnor.PetInfo') }}">Pet Information Overview</a>
                     <a class="dropdown-item" href="{{ url_for('bchase.Enclosures') }}">Enclosures</a>
                 </div>
+        </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Database Features
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="nav-link" href={{ url_for('crud.search') }}>SQL Search</a>
-                    <a class="nav-link" href={{ url_for('crud.crud') }}>SQL Crud </a>
+                    <a class="nav-link" href="{{ url_for('crud.search') }}">SQL Search</a>
+                    <a class="nav-link" href="{{ url_for('crud.crud') }}">SQL Crud </a>
                 </div>
             </li>
 
