--- a/templates/stress.html
+++ b/templates/stress.html
@@ -37,8 +37,9 @@
         </div>
         <div class="col-sm-6">
         <p>
-            Here is the coloring book:
-            <br>
+            <p style="font-size: x-large">
+                <button class="button button1">Coloring Book</button>
+                <br>
             <a href="https://coloringbook.pics/">
                 <img src="/static/assets/colorpage.jpg" width=70%">
             </a>
