--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -47,6 +47,7 @@
                     <a class="dropdown-item" href="{{ url_for('btanay.hangman') }}">Hangman</a>
                     <a class="dropdown-item" href="{{ url_for('bchase.cats') }}">Cats Adoption</a>
                     <a class="dropdown-item" href="{{ url_for('bcolin.imageCarousel') }}">Meet Some Pets</a>
+                    <a class="dropdown-item" href="{{ url_for('bpranav.petplanner') }}">Plan Out Adopting A Pet</a>
                 </div>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
