Added AirportDetails Nav item. Enter airport IATA code to get phone number, address and website of airport.

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -18,6 +18,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('weather') }}>Weather</a>
             <a class="nav-link" href={{ url_for('hotels') }}>Hotel</a>
             <a class="nav-link" href={{ url_for('maps') }}>Map</a>
+            <a class="nav-link" href={{ url_for('airportdetails') }}>Airports</a>
             <a class="nav-link" href={{ url_for('crud.crud') }}>Crud</a>
             <a class="nav-link" href={{ url_for('crud.search') }}>Search</a>
 
