--- a/templates/tanay.html
+++ b/templates/tanay.html
@@ -38,6 +38,8 @@
                 }
             }
         })
+
+
     </script>
 
     <style>
@@ -83,7 +85,10 @@
         button {
             margin: 16px;
         }
+
     </style>
+
+
 
     {% endblock %}
 
@@ -92,6 +97,8 @@
 </head>
 
 <body>
+
+
     <h1 class="text-center">Meet Tanay Rayavarapu</h1>
     <div class="container">
         <div class="row justify-content-md-center" style="align:center">
@@ -162,10 +169,13 @@
                     <div class='content'>
                        Switch to Dark Theme
                     </div>
-                    <button @click='toggleTheme'>
+                    <button onclick='toggleTheme'>
                         Toggle
                     </button>
                 </div>
+
+
+
 </body>
 </html>
 {% endblock %}
