Updated PBL Hangman

--- a/templates/hangman.html
+++ b/templates/hangman.html
@@ -26,6 +26,13 @@
 
 </head>
 <body>
+
+    <style>
+        html,body {
+            background-color: royalblue;
+        }
+    </style>
+
     <h1>Input Random Pet Name</h1>
 
     <form action="/">
@@ -41,6 +48,10 @@
     <div>
         <button onclick="dark()">Toggle dark mode</button>
         <div/>
+
+
+        <img id="place" class="img-responsive py-3" alt="" width="500" src="/static/assets/pets.jpeg" >
+        <img id="place" class="img-responsive py-3" alt="" width="256" src="/static/assets/pitbull.jpg" >
 
 </body>
 </html>
