--- a/templates/PetInfo.html
+++ b/templates/PetInfo.html
@@ -12,7 +12,7 @@
 {% block body %}
 <body>
 
-<table style="width:100%">
+<table style="®width:100%">
     <tr>
             <th class="p-5 bg-primary text-white text-center">Pet</th>
             <th class="p-5 bg-primary text-white text-center">Pet Description</th>
