--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -1,57 +1,64 @@
 <!-- Navigation Bar from bootstrap
 This HTML is setup as a fragment allowing it to be "included" by other HTML files via Jinja2
 -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">{{basename}}</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <style>
-        .dropdown:hover{
-            display: inline-block;
-        }
-    </style>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <!--root menu -->
-            <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarModel" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Pages
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/mainabout">About Us</a>
-                    <a class="dropdown-item" href="/mainabout/">Project Green</a>
-                    <a class="dropdown-item" href="/worldclock">World Clock</a>
-                    <a class="dropdown-item" href="/translator">Language Translator</a>
-                    <a class="dropdown-item" href="/mainabout">Rankings</a>
-                    <a class="dropdown-item" href="/mainabout">Activities</a>
-                    <a class="dropdown-item" href="/weather">Weather</a>
-                    <a class="dropdown-item" href="/crud">Crud</a>
-                    <a class="dropdown-item" href="/search">Search</a>
+<htm>
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"><</script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="annonymous"></script>
+</head>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">{{basename}}</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <style>
+            .dropdown:hover{
+                display: inline-block;
+            }
+        </style>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+                <!--root menu -->
+                <li class="nav-item active">
+                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" id="dropdownMenuButton1" type="button" aria-expanded="false">
+                        Projects
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <a class="dropdown-item" href="/mainabout">About Us</a>
+                        <a class="dropdown-item" href="/mainabout/">Project Green</a>
+                        <a class="dropdown-item" href="/worldclock">World Clock</a>
+                        <a class="dropdown-item" href="/translator">Language Translator</a>
+                        <a class="dropdown-item" href="/mainabout">Rankings</a>
+                        <a class="dropdown-item" href="/mainabout">Activities</a>
+                        <a class="dropdown-item" href="/weather">Weather</a>
+                        <a class="dropdown-item" href="/crud">Crud</a>
+                        <a class="dropdown-item" href="/search">Search</a>
+                    </div>
+                </li>
+                <a class="nav-link" href="/mainabout">About Us <span class="sr-only">(current)</span></a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="/feedback">Give Us Feedback!<span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
+            <div class="btn-group">
+                <!-- Clock display -->
+                <div class="px-3 text-dark">
+                    <span id="clock"></span>
                 </div>
-            </li>
-            <a class="nav-link" href="/mainabout">About Us <span class="sr-only">(current)</span></a>
-            <li class="nav-item dropdown">
-                <a class="nav-link" href="/feedback">Give Us Feedback!<span class="sr-only">(current)</span></a>
-            </li>
-        </ul>
-        <div class="btn-group">
-            <!-- Clock display -->
-            <div class="px-3 text-dark">
-                <span id="clock"></span>
+                <!-- Dark mode action -->
+                <div class="form-check form-switch">
+                    <input type="checkbox" onclick="darkFunction()" class="form-check-input" id="darkSwitch">
+                    <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
+                </div>
             </div>
-            <!-- Dark mode action -->
-            <div class="form-check form-switch">
-                <input type="checkbox" onclick="darkFunction()" class="form-check-input" id="darkSwitch">
-                <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
-            </div>
+            {% block navbar_script %}
+                <!-- Navigation bar JavaScript support -->
+                <script src={{  url_for("static", filename="/navbar.js", version='140') }}></script>
+            {% endblock %}
         </div>
-        {% block navbar_script %}
-            <!-- Navigation bar JavaScript support -->
-            <script src={{  url_for("static", filename="/navbar.js", version='140') }}></script>
-        {% endblock %}
-    </div>
-</nav>
+    </nav>
+</htm>
