--- a/templates/connor.html
+++ b/templates/connor.html
@@ -50,7 +50,8 @@
             <tbody>
             <tr class="image">
                 <td>
-                    <p> Hi! My name is Connor Wang and I am a junior at Del Norte High School. I am enrolled in the CSP class. I play for the Del Norte football team, and love spending time with friends!</p>
+                    <p> Hi! My name is Connor Wang and I am a junior at Del Norte High School. I am enrolled in the CSP class. I play for the Del Norte football team, and love spending time with friends!
+                     Week 4 Work: Blueprints and Pet Information Overview Page</p>
                     <img id="place" class="img-responsive py-3" alt="" width="256" src="/static/assets/connormask.jpg" >
                     <div>
                         <button onclick="maskchange()" id="maskchange-btn">Switch to mask off</button>
