--- a/templates/petplanner.html
+++ b/templates/petplanner.html
@@ -5,7 +5,7 @@
 <head>
     <style>
         body {
-            background-image: url("https://st2.depositphotos.com/5060369/8233/i/950/depositphotos_82333658-stock-photo-light-brown-background.jpg");
+            background-image: url("/static/assets/pranavpets2.jpeg");
         }
 
         .container {
