--- a/templates/pbl/hotels.html
+++ b/templates/pbl/hotels.html
@@ -44,6 +44,7 @@
     <input type="text" placeholder="Enter location" name='keyword'>
     <button type="submit">Get Hotels</button>
 </form>
+<body>
 <table>
     <tr>
         <th>GeoID</th>
