extend background color on hotels

--- a/templates/pbl/hotels.html
+++ b/templates/pbl/hotels.html
@@ -38,6 +38,9 @@
             width: 75%;
             margin: auto;
         }
+        html, body {
+            overflow: auto;
+        }
     </style>
 </head>
 <form action="/hotels/" method="POST">
