change button label on hotels

--- a/templates/pbl/hotels.html
+++ b/templates/pbl/hotels.html
@@ -7,7 +7,7 @@
 <head>
     <div class="wrapper-color-switch">
         <input type="checkbox" id="input-color-switch">
-        <label for="input-color-switch">click to change color
+        <label for="input-color-switch">dark mode / light mode
         </label>
     </div>
     <meta charset="UTF-8">
