search and crud formatting

--- a/crud/templates/crud/crud.html
+++ b/crud/templates/crud/crud.html
@@ -13,6 +13,7 @@
 
 <!-- CONTENT (in <body>), content for this page -->
 {% block body %}
+    <body style="background-color:#4d1569; height: fit-content">
     <div class="container py-4 text-light bg-success">
         <header class="pb-3 mb-4 border-bottom">
             <div class="d-flex align-items-center text-light text-decoration-none">
