--- a/templates/mainabout.html
+++ b/templates/mainabout.html
@@ -8,14 +8,13 @@
     <title>About Us</title>
 </head>
 {% block body %}
-<div class="container-fluid" style="background-image: url('../static/assets/nathan1.jpg'); height: available; width: 100%; background-repeat: no-repeat; background-attachment: fixed">
-    <style>
+<style>
         .aboutUsImage{
             cursor:pointer;
             width: 232px;
             height: 309px;
             transform: translateY(3px);
-            margin:auto;
+            margin:;
         }
         .nathan{
             background: url('../static/assets/nathan.png') no-repeat;
@@ -52,10 +51,10 @@
     </style>
 </div>
 <body>
-    <div class="col-0" style="margin: 10% 5%" name="imgbox" id="imgbox">
+    <div class="col-0" style="margin: 4% 2%">
         <div class="table">
-            <div class="row">
-                <div class="content_img" style="margin-left:0%">
+            <div class="row" style="margin: 4% 2%">
+                <div class="content_img" style="margin:auto">
                     <input type="button" class="fa aboutUsImage nathan" onclick="location.href = '/aboutnathan';">
                     <div style="color:black">Nathan Manangan</div>
                 </div>
