--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -12,8 +12,11 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 
 
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"><</script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="annonymous"></script>
+    </head>
     <style>
         :root{
             --white: whitesmoke;
@@ -32,11 +35,6 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             color: var(--white);
         }
 
-        .dark-mode {
-            background-color: var(--white);
-            color: var(--black);
-        }
-
         h1{
             font-size: 5em;
         }
@@ -53,27 +51,8 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             transform: translateY(10px);
         }
 
-        .fa-github:hover{
+        .fa-github:hover {
             color: #000000;
-        }
-
-        .btn:link,
-        .btn:visited {
-            text-transform: uppercase;
-            text-decoration: none;
-            padding: 15px 40px;
-            display: inline-block;
-            border-radius: 100px;
-            transition: all .2s;
-            position: absolute;
-            color: white;
-            font-size: 2.5em;
-        }
-
-
-
-        .row{
-            margin: auto;
         }
 
 
@@ -123,13 +102,9 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 
     </div>
 </div>
+    <body style= "background-image: url('/static/assets/city.jpg'); background-repeat: no-repeat; background-size: cover;">
 {% endblock %}
-
 </body>
 
-{% block background %}
-    <script src="{{ url_for('static', filename='') }}"></script>
-    <script src="{{ url_for('static', filename='') }}"></script>
-{% endblock %}
 
 </html>
