Added binary search to evan.html Fixed some visual things in evan.html

--- a/templates/about_us/evan.html
+++ b/templates/about_us/evan.html
@@ -7,12 +7,38 @@
 
 <style>
     img{
-        border-radius:50px;
+        border-radius:20px;
     }
 
     table td{
-        border: 1px solid black;
         padding:10px
+    }
+    input{
+        background-color:#8c7060;
+        border: 2px solid #64483f;
+        border-radius:5px;
+    }
+    ::placeholder{
+        color:#64483f;
+    }
+    .docsIcon:hover{
+        color:#508cec;
+        transform: scale(1.2);
+        transition: transform .2s;
+    }
+    .commitsIcon:hover{
+        color:#2cc420;
+        transform: scale(1.2);
+        transition: transform .2s;
+    }
+    .scrumboardIcon:hover{
+        color:#3f3f3f;
+        transform: scale(1.2);
+        transition: transform .2s;
+    }
+    .githubIcon:hover{
+        transform: scale(1.2);
+        transition: transform .2s;
     }
 </style>
 
@@ -28,7 +54,7 @@
 
 <h2> About Me </h2>
 
-    <p style="font-size: 18px;">Hi my name is Evan Sanchez! I like playing guitar, video games, and listening to music. I didn't know
+    <p style="font-size: 18px;">Hi my name is Evan Sanchez! I'm a junior studying computer science at Del Norte high school. I like playing guitar, video games, and listening to music. I didn't know
     almost anything about computer programming before this class, but I'm learning a lot and enjoying it. My favorite language
     to program in at the moment is JavaScript, but that might change as I learn more languages. </p>
 
@@ -37,26 +63,33 @@
     <div style="float:left">
      <button class='btn' onclick='toggleSwitch()'> Mask Toggle</button> <br>
 
-    <img style="padding-top:10px" id='img1' src="https://qph.fs.quoracdn.net/main-qimg-635cfcea38e601b36571db1af9d7e2e5-lq">
+    <img style="padding-top:10px" id='img1' src="https://images.unsplash.com/photo-1604866830893-c13cafa515d5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80">
 
     </div>
 
-    <table style="margin-left:50%">
+    <table style="margin-left:60%">
         <tr>
-            <td><a target="_blank" href="https://github.com/deimie">Github Profile</a></td>
-            <td><a target="_blank" href="https://github.com/SimonBrunzell/flask_portfolio/commits?author=deimie">Commits</a></td>
-            <td><a target="_blank" href="https://github.com/SimonBrunzell/flask_portfolio/projects/1?card_filter_query=assignee%3Adeimie">Scrum Board Tasks</a></td>
-            <td><a target="_blank" href="https://docs.google.com/document/d/1utBhod9HOMFYtKowLyFNyT5Rc6tgHKbGJc-yEbY509U/edit?usp=sharing">Pair Journal</a></td>
+            <td title="Github Profile"><a target="_blank" href="https://github.com/deimie"><svg aria-hidden="true" height="60px" focusable="false" data-prefix="fab" data-icon="github" class="svg-inline--fa fa-github fa-w-16 githubIcon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"><path fill="currentColor" d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"></path></svg></a></td>
+            <td title="Commits"><a target="_blank" href="https://github.com/SimonBrunzell/flask_portfolio/commits?author=deimie"><svg aria-hidden="true" height="60px" focusable="false" data-prefix="fas" data-icon="check" class="svg-inline--fa fa-check fa-w-16 commitsIcon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"></path></svg></a></td>
+            <td title="Scrum Board"><a target="_blank" href="https://github.com/SimonBrunzell/flask_portfolio/projects/1?card_filter_query=assignee%3Adeimie"><svg aria-hidden="true" height="60px" focusable="false" data-prefix="fas" data-icon="clipboard-list" class="svg-inline--fa fa-clipboard-list fa-w-12 scrumboardIcon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path fill="currentColor" d="M336 64h-80c0-35.3-28.7-64-64-64s-64 28.7-64 64H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48zM96 424c-13.3 0-24-10.7-24-24s10.7-24 24-24 24 10.7 24 24-10.7 24-24 24zm0-96c-13.3 0-24-10.7-24-24s10.7-24 24-24 24 10.7 24 24-10.7 24-24 24zm0-96c-13.3 0-24-10.7-24-24s10.7-24 24-24 24 10.7 24 24-10.7 24-24 24zm96-192c13.3 0 24 10.7 24 24s-10.7 24-24 24-24-10.7-24-24 10.7-24 24-24zm128 368c0 4.4-3.6 8-8 8H168c-4.4 0-8-3.6-8-8v-16c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16zm0-96c0 4.4-3.6 8-8 8H168c-4.4 0-8-3.6-8-8v-16c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16zm0-96c0 4.4-3.6 8-8 8H168c-4.4 0-8-3.6-8-8v-16c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16z"></path></svg></a></td>
+            <td title="Pair Journal"><a target="_blank" href="https://docs.google.com/document/d/1utBhod9HOMFYtKowLyFNyT5Rc6tgHKbGJc-yEbY509U/edit?usp=sharing"><svg aria-hidden="true" height="60px" focusable="false" data-prefix="fas" data-icon="file-alt" class="svg-inline--fa fa-file-alt fa-w-12 docsIcon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path fill="currentColor" d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm64 236c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12v8zm0-64c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12v8zm0-72v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm96-114.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"></path></svg></a></td>
         </tr>
     </table>
 
-    <hr>
-
-        <div style="background-color:#856159; border-radius:50px; height:180px; width:500px; margin-left:50%">
+        <div style="background-color:#856159; border-radius:15px; height:180px; width:500px; margin-left:50%">
                 <h1 style="font-size:50px">Geolocation API</h1>
-                <button class="btn" id = "find-me">Show my location</button><br/>
+                <button class="btn" id="find-me">Show my location</button><br/>
                 <p id = "status"></p>
                 <a id = "map-link" target="_blank"></a>
+        </div>
+
+    <br>
+
+        <div style="background-color:#856159; border-radius:15px; height:180px; width:500px; margin-left:50%">
+            <h1 style="font-size:50px">Binary Search Counter</h1>
+            <input type="number" id="binaryInput" placeholder="Enter a number..">
+            <button class="btn" onclick="binarySearch()">Go</button>
+            <p id="return">⠀</p>
         </div>
 
 </section>
@@ -65,11 +98,25 @@
 
     <script>
     function toggleSwitch(){
-        if(document.getElementById('img1').src == 'https://qph.fs.quoracdn.net/main-qimg-635cfcea38e601b36571db1af9d7e2e5-lq'){
+        if(document.getElementById('img1').src == 'https://images.unsplash.com/photo-1604866830893-c13cafa515d5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80'){
             document.getElementById('img1').src = 'https://images.squarespace-cdn.com/content/v1/517dbeece4b08d6929ebd7d0/1367439346257-44IUNBVJ3FVIFDTTO2E4/Hydrohull+300x500.png';
         } else{
-            document.getElementById('img1').src = 'https://qph.fs.quoracdn.net/main-qimg-635cfcea38e601b36571db1af9d7e2e5-lq';
+            document.getElementById('img1').src = 'https://images.unsplash.com/photo-1604866830893-c13cafa515d5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80';
         }
+    }
+
+    function binarySearch(){
+        let binaryInput = document.getElementById('binaryInput').value;
+        let NoD = 1
+        while(binaryInput > 1){
+            if(binaryInput % 1 == 0){
+                binaryInput/=2;
+                NoD+=1;
+            } else {
+                binaryInput = Math.round(binaryInput)
+            }
+        }
+        document.getElementById('return').innerHTML = NoD;
     }
 
     function geoFindMe() {
