--- a/templates/final_grade_calc.html
+++ b/templates/final_grade_calc.html
@@ -41,7 +41,7 @@ function calcgrade() {
           console.log("situation 1");
           other = (curr/100)*(100-weight);
           var needed = +(((goal-other)*100)/weight).toFixed(2);
-          document.getElementById("test").innerText = "You needed a " + needed + "% to get a " + goal + "% on the test."
+          document.getElementById("test").innerText = "You needed a " + needed + "% to get a " + goal + "% in the class."
       }
 }
 function theme() {
