--- a/templates/H2C4P.html
+++ b/templates/H2C4P.html
@@ -43,7 +43,7 @@
     <h2>How to care for a lost puppy</h2>
     <p></p>
     <div class="container mt-3">
-        <h2>Enclosures Info</h2>
+        <h2>Steps</h2>
         <table class="table table-dark table-hover">
             <tbody>
 
