--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -56,6 +56,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{{ url_for('bconnor.PetInfo') }}">Pet Information Overview</a>
                     <a class="dropdown-item" href="{{ url_for('bchase.Enclosures') }}">Enclosures</a>
+                    <a class="dropdown-item" href="{{ url_for('btanay.pethistory') }}">Pet History</a>
                 </div>
         </li>
             <li class="nav-item dropdown">
