--- a/templates/pbl/airportdetails.html
+++ b/templates/pbl/airportdetails.html
@@ -9,20 +9,23 @@
     <title>Hotels</title>
     <style>
         th {
-            background-color: white;
+            background-color: tan;
         }
         table, td, th {
-            border: 4px solid midnightblue;
+            border: 4px solid saddlebrown;
             padding: 50px;
         }
         td, th {
             text-align:center;
-            color: midnightblue;
+            color: black;
             font-size: 20px;
         }
         table{
             width: 75%;
             margin: auto;
+        }
+        html,body{
+            background-color: sandybrown;
         }
 
     </style>
