--- a/templates/aboutjacob.html
+++ b/templates/aboutjacob.html
@@ -22,7 +22,7 @@
     </div>
     <div class="col-sm">
         <h1>API</h1>
-        <p></p>
+        <p>Hello! My name is Jacob Rozenkrants, and I am a senior at Del Norte High School.</p>
         <div id="name"></div>
         <br>
         <p>Id:</p>
