--- a/templates/aboutjacob.html
+++ b/templates/aboutjacob.html
@@ -28,7 +28,7 @@
         <p>Id:</p>
         <div id="id"></div>
         <br>
-        <p>Height:</p>
+        <p>Height: 5'11</p>
         <div id="height"></div>
         <br>
         <h1>Links</h1>
