locations api working

--- a/templates/places.html
+++ b/templates/places.html
@@ -20,7 +20,7 @@ words[3] = "India"
 words[4] = "USA"
 words[5] = "Canada"
 words[6] = "Mexico"
-words[7] = "Isreal"
+words[7] = "Israel"
 words[8] = "China"
 words[9] = "Japan"
 words[10] = "Russia"
@@ -40,7 +40,7 @@ words[23] = "Poland"
 words[24] = "Spain"
 words[25] = "Nepal"
 words[26] = "South Korea"
-words[27] = "Phillipennes"
+words[27] = "Philippines"
 words[28] = "Italy"
 words[29] = "Sweden"
 words[30] = "Australia"
