--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -19,7 +19,7 @@
             <a class="nav-link" href={{ url_for('crud.crud') }}>Crud</a>
             <a class="nav-link" href={{ url_for('crud.search') }}>Search</a>
             <a class="nav-link" href={{ url_for('carrental') }}>Car Rental</a>
-            <a class="nav-link" href={{ url_for('visit') }}>Next Trip?</a>
+            <a class="nav-link" href={{ url_for('location') }}>Next Trip?</a>
 
             <form class="form-inline" onsubmit="alert('it works')">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
