updates to places generator and nav bar

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -20,7 +20,7 @@
             <a class="nav-link" href={{ url_for('crud.search') }}>Search</a>
             <a class="nav-link" href={{ url_for('carrental') }}>Car Rental</a>
             <a class="nav-link" href={{ url_for('location') }}>Next Trip?</a>
-
+            <a class="nav-link" href={{ url_for('places') }}>Places to go</a>
             <form class="form-inline" onsubmit="alert('it works')">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
