updates to places generator and nav bar

--- a/templates/places.html
+++ b/templates/places.html
@@ -13,7 +13,7 @@
 var words = new BuildArray(NumberOfWords)
 
 // Use the following variables to
-// define your random words:
+// defines countries:
 words[1] = "Brazil"
 words[2] = "France"
 words[3] = "India"
